--- a/popup.html
+++ b/popup.html
@@ -25,6 +25,7 @@
       </li>
       <li class="list-group-item" id="access"></li>
       <li class="list-group-item" id="edit"></li>
+      <li class="list-group-item" id="login"></li>
     </ul>
     <script type="text/javascript" src="popup.js"></script>
   </body>
